--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,21 @@
-# Auto detect text files and perform LF normalization
+# Standard: Textdateien normalisieren
 * text=auto
+
+# Für Web-Projekte: immer LF (auch auf Windows)
+*.js      text eol=lf
+*.ts      text eol=lf
+*.vue     text eol=lf
+*.css     text eol=lf
+*.html    text eol=lf
+*.json    text eol=lf
+*.md      text eol=lf
+*.yml     text eol=lf
+*.yaml    text eol=lf
+
+# Binärdateien
+*.png binary
+*.jpg binary
+*.jpeg binary
+*.gif binary
+*.webp binary
+*.pdf binary
