--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,20 @@
-# Node/Vite
-node_modules/
-dist/
+﻿# Python
+__pycache__/
+*.pyc
 .venv/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-.DS_Store
 
-# IDE
+# DB / Secrets
+*.db
+.env
+.env.*
+
+# Node/Vite (Frontend)
+node_modules/
+dist/
+.vite/
+
+# OS / Editor
+.DS_Store
+Thumbs.db
 .vscode/
-.idea/
